OP-679 Fix fields validation when admission date is not valid
(compulsory field)

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -7,6 +7,7 @@ angal.admission.admission.txt                                                   
 angal.admission.admissionanddischarge.title                                                            = Admission / Discharge
 angal.admission.admissiondate.border                                                                   = Admission Date *
 angal.admission.admissiondate.txt                                                                      = Admission Date *
+angal.admission.admissiondatecannotbeempty.msg                                                         = Admission date cannot be empty.
 angal.admission.admissionstatus.border                                                                 = Admission Status
 angal.admission.admissiontype.border                                                                   = Admission Type *
 angal.admission.admitted.txt                                                                           = Admitted
@@ -127,6 +128,7 @@ angal.admission.patientsummary                                                  
 angal.admission.pleaseinsertacorrectprogressiveid.msg                                                  = Please insert a correct progressive id.
 angal.admission.pleaseinsertadischargedate.msg                                                         = Please insert a discharge date.
 angal.admission.pleaseinsertavalidabortdate.msg                                                        = Please insert a valid abort date.
+angal.admission.pleaseinsertavalidadmissiondate.msg                                                    = Please insert a valid admission date.
 angal.admission.pleaseinsertavalidcontroln1date.msg                                                    = Please insert a valid control n.1 date.
 angal.admission.pleaseinsertavalidcontroln2date.msg                                                    = Please insert a valid control n.2 date.
 angal.admission.pleaseinsertavaliddeliverydate.msg                                                     = Please insert a valid delivery date.
