OP-679 Avoid NPE if ward is empty

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -10,6 +10,7 @@ angal.admission.admissiondate.txt                                               
 angal.admission.admissiondatecannotbeempty.msg                                                         = Admission date cannot be empty.
 angal.admission.admissionstatus.border                                                                 = Admission Status
 angal.admission.admissiontype.border                                                                   = Admission Type *
+angal.admission.admissionwardcannotbeempty.msg                                                         = Admission ward cannot be empty.
 angal.admission.admitted.txt                                                                           = Admitted
 angal.admission.age.border                                                                             = Age
 angal.admission.beddays.border                                                                         = Bed Days
