OP-150 Add missing report

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -388,7 +388,7 @@ angal.stat.inpatientdiagnosisout                                            = HM
 angal.stat.january                                                          = يناير
 angal.stat.july                                                             = يوليو
 angal.stat.june                                                             = يونيو
-angal.stat.labmonthlybasic                                                  = OH007 - مختبر الأساسية الشهرية
+angal.stat.labmonthlybasic                                                  = OH007A - مختبر الأساسية الشهرية
 angal.stat.labmonthlyformatted                                              = HMIS 55B - لاب الشهرية تنسيق
 angal.stat.labsummaryforopd                                                 = OH008 - ملخص مختبر العيادات الخارجية لل
 angal.stat.march                                                            = مارس
