--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -250,6 +250,7 @@ angal.stat.july                                                      = Juli
 angal.stat.june                                                      = Juni
 angal.stat.labmonthlybasic                                           = OH007 - Labor Monatsbasis
 angal.stat.labmonthlyformatted                                       = HMIS 55b - Labor Montatsübersicht
+angal.stat.labmonthlyresult                                          = OH007 - Labor Monatsbasis
 angal.stat.labsummaryforopd                                          = OH008 - Laborzusammenfassung für OPD
 angal.stat.march                                                     = März
 angal.stat.may                                                       = Mai
