--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1352,8 +1352,9 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = January
 angal.stat.july                                                                                        = July
 angal.stat.june                                                                                        = June
-angal.stat.labmonthlybasic                                                                             = OH007 - Lab monthly basic
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratory Monthly Report
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Lab monthly formatted
+angal.stat.labmonthlyresult                                                                            = OH007B - Laboratory Results Report
 angal.stat.labsummaryforopd                                                                            = OH008 - Lab summary for OPD
 angal.stat.march                                                                                       = March
 angal.stat.may                                                                                         = May
