--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1349,7 +1349,7 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = Enero
 angal.stat.july                                                                                        = Julio
 angal.stat.june                                                                                        = Junio
-angal.stat.labmonthlybasic                                                                             = OH007 - Laboratorio Mensual Base
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratorio Mensual Base
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Laboratorio Mensual Estructurado
 angal.stat.labsummaryforopd                                                                            = OH008 - Resumen Laboratorio por DDP
 angal.stat.march                                                                                       = Marzo
