--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1343,7 +1343,7 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = Janvier
 angal.stat.july                                                                                        = Juillet
 angal.stat.june                                                                                        = Juin
-angal.stat.labmonthlybasic                                                                             = OH007 - Laboratoire mensuel base
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratoire mensuel base
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Laboratoire mensuel structuré
 angal.stat.labsummaryforopd                                                                            = OH008 - Récapitulation Laboratoire pour DDP
 angal.stat.march                                                                                       = Mars
