--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1349,7 +1349,7 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = Gennaio
 angal.stat.july                                                                                        = Luglio
 angal.stat.june                                                                                        = Giugno
-angal.stat.labmonthlybasic                                                                             = OH007 - Laboratorio Mensile Base
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratorio Mensile Base
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Laboratorio Mensile Strutturato
 angal.stat.labsummaryforopd                                                                            = OH008 - Riepilogo Laboratorio per OPD
 angal.stat.march                                                                                       = Marzo
