OP-682 Fix admitted patient speed issue
- switched back to native query for model mapping
- add single result query for patient code
- add OutOfMemory exception handle when ENHANCEDSEARCH=no

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1327,6 +1327,7 @@ angal.sql.anunexpectederroroccurredpleasecheckthelogs.msg                       
 angal.sql.constraintviolation.msg                                                                      = Constraint violation.
 angal.sql.databaseserverstoppedornetworkfailure.msg                                                    = Database server stopped or network failure.
 angal.sql.operationnotpermittedprotectedelement                                                        = Operation not permitted, protected element.
+angal.sql.pleaseconsiderenablingtheenhancedsearchsettingseeadminmanualformoreinfo.msg                  = Please consider enabling the ENHANCEDSEARCH setting.\n\nSee Admin Manual for more info.
 angal.sql.problemsoccurredwithserverconnection.msg                                                     = Problems occurred with server connection.
 angal.sql.problemsoccurredwiththesqlinstruction.msg                                                    = Problems occurred with the SQL instruction.
 angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                                       = The data has been updated by someone else.
