OP-282 OP-101 Spring 5 and Java 8 time
Changes from version 1.11

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1327,6 +1327,7 @@ angal.sql.anunexpectederroroccurredpleasecheckthelogs.msg                       
 angal.sql.constraintviolation.msg                                                                      = Constraint violation.
 angal.sql.databaseserverstoppedornetworkfailure.msg                                                    = Database server stopped or network failure.
 angal.sql.operationnotpermittedprotectedelement                                                        = Operation not permitted, protected element.
+angal.sql.pleaseconsiderenablingtheenhancedsearchsettingseeadminmanualformoreinfo.msg                  = Please consider enabling the ENHANCEDSEARCH setting.\n\nSee Admin Manual for more info.
 angal.sql.problemsoccurredwithserverconnection.msg                                                     = Problems occurred with server connection.
 angal.sql.problemsoccurredwiththesqlinstruction.msg                                                    = Problems occurred with the SQL instruction.
 angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                                       = The data has been updated by someone else.
@@ -1352,8 +1353,9 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = January
 angal.stat.july                                                                                        = July
 angal.stat.june                                                                                        = June
-angal.stat.labmonthlybasic                                                                             = OH007 - Lab monthly basic
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratory Monthly Report
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Lab monthly formatted
+angal.stat.labmonthlyresult                                                                            = OH007B - Laboratory Results Report
 angal.stat.labsummaryforopd                                                                            = OH008 - Lab summary for OPD
 angal.stat.march                                                                                       = March
 angal.stat.may                                                                                         = May
