--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -7,8 +7,10 @@ angal.admission.admission.txt                                                   
 angal.admission.admissionanddischarge.title                                                            = Ricovero / Dimissione
 angal.admission.admissiondate.border                                                                   = Data Ricovero *
 angal.admission.admissiondate.txt                                                                      = Data Ricovero *
+angal.admission.admissiondatecannotbeempty.msg                                                         = La data di ricovero non può essere vuota
 angal.admission.admissionstatus.border                                                                 = Stato Ricovero
 angal.admission.admissiontype.border                                                                   = Tipologia Ricovero *
+angal.admission.admissionwardcannotbeempty.msg                                                         = Il reparto non può essere vuoto
 angal.admission.admitted.txt                                                                           = Ricoverato
 angal.admission.age.border                                                                             = Età
 angal.admission.beddays.border                                                                         = Giorni Letto
@@ -127,6 +129,7 @@ angal.admission.patientsummary                                                  
 angal.admission.pleaseinsertacorrectprogressiveid.msg                                                  = Prego inserire un corretto id progressivo.
 angal.admission.pleaseinsertadischargedate.msg                                                         = Prego inserire una data dimissione.
 angal.admission.pleaseinsertavalidabortdate.msg                                                        = Prego inserire una data aborto valida.
+angal.admission.pleaseinsertavalidadmissiondate.msg                                                    = Inserire una data di ricovero valida
 angal.admission.pleaseinsertavalidcontroln1date.msg                                                    = Prego inserire una data controllo n.1 valida.
 angal.admission.pleaseinsertavalidcontroln2date.msg                                                    = Prego inserire una data controllo n.2 valida.
 angal.admission.pleaseinsertavaliddeliverydate.msg                                                     = Prego inserire una data parto valida.
@@ -1324,6 +1327,7 @@ angal.sql.anunexpectederroroccurredpleasecheckthelogs.msg                       
 angal.sql.constraintviolation.msg                                                                      = Violazione di vincoli.
 angal.sql.databaseserverstoppedornetworkfailure.msg                                                    = Il server del database è stato arrestato o si è verificato un errore di rete.
 angal.sql.operationnotpermittedprotectedelement                                                        = Operazione non permessa. Elemento protetto.
+angal.sql.pleaseconsiderenablingtheenhancedsearchsettingseeadminmanualformoreinfo.msg                  = Per favore considera l'abilitazione del parametro ENHANCEDSEARCH.\n\nVedere il Manuale Admin per maggiori informazioni.
 angal.sql.problemsoccurredwithserverconnection.msg                                                     = Si sono verificati problemi con la connessione al server.
 angal.sql.problemsoccurredwiththesqlinstruction.msg                                                    = Si sono verificati problemi con l'istruzione SQL.
 angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                                       = I dati sono stati aggiornati da qualcun altro.
@@ -1349,8 +1353,9 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = Gennaio
 angal.stat.july                                                                                        = Luglio
 angal.stat.june                                                                                        = Giugno
-angal.stat.labmonthlybasic                                                                             = OH007 - Laboratorio Mensile Base
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratorio Mensile Base
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Laboratorio Mensile Strutturato
+angal.stat.labmonthlyresult                                                                            = Rapporto sui risultati di laboratorio
 angal.stat.labsummaryforopd                                                                            = OH008 - Riepilogo Laboratorio per OPD
 angal.stat.march                                                                                       = Marzo
 angal.stat.may                                                                                         = Maggio
