--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -7,8 +7,10 @@ angal.admission.admission.txt                                                   
 angal.admission.admissionanddischarge.title                                                            = Admisión / Alta
 angal.admission.admissiondate.border                                                                   = Fecha Hospitalización *
 angal.admission.admissiondate.txt                                                                      = Fecha Hospitalización *
+angal.admission.admissiondatecannotbeempty.msg                                                         = La fecha de admisión no puede estar vacía.
 angal.admission.admissionstatus.border                                                                 = Estado Hospitalización
 angal.admission.admissiontype.border                                                                   = Tipologías Hospitalización *
+angal.admission.admissionwardcannotbeempty.msg                                                         = El pabellón de admisiones no puede estar vacío.
 angal.admission.admitted.txt                                                                           = Hospitalizado
 angal.admission.age.border                                                                             = Edad
 angal.admission.beddays.border                                                                         = Dóas de Internación
@@ -127,6 +129,7 @@ angal.admission.patientsummary                                                  
 angal.admission.pleaseinsertacorrectprogressiveid.msg                                                  = Por favor digitar un correcto id progresivo.
 angal.admission.pleaseinsertadischargedate.msg                                                         = Por favor digitar una fecha egreso.
 angal.admission.pleaseinsertavalidabortdate.msg                                                        = Por favor digitar una fecha aborto válida.
+angal.admission.pleaseinsertavalidadmissiondate.msg                                                    = Introduzca una fecha de admisión válida.
 angal.admission.pleaseinsertavalidcontroln1date.msg                                                    = Por favor digitar una fecha control n.1 válida.
 angal.admission.pleaseinsertavalidcontroln2date.msg                                                    = Por favor digitar una fecha control n.2 válida.
 angal.admission.pleaseinsertavaliddeliverydate.msg                                                     = Por favor digitar una fecha parto válida.
@@ -1324,6 +1327,7 @@ angal.sql.anunexpectederroroccurredpleasecheckthelogs.msg                       
 angal.sql.constraintviolation.msg                                                                      = Violación de restricción.
 angal.sql.databaseserverstoppedornetworkfailure.msg                                                    = El servidor de la base de datos se detuvo o falla la red.
 angal.sql.operationnotpermittedprotectedelement                                                        = Operación no permitida. Elemento protegido.
+angal.sql.pleaseconsiderenablingtheenhancedsearchsettingseeadminmanualformoreinfo.msg                  = Considere habilitar la configuración ENHANCEDSEARCH.\n\nConsulte el Manual de administración para obtener más información.
 angal.sql.problemsoccurredwithserverconnection.msg                                                     = Problemas en la conexión al servidor.
 angal.sql.problemsoccurredwiththesqlinstruction.msg                                                    = Ocurrieron problemas con la instrucción SQL.
 angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                                       = El dato ha sido actualizado por otro usuario.
@@ -1349,8 +1353,9 @@ angal.stat.inpatientreport                                                      
 angal.stat.january                                                                                     = Enero
 angal.stat.july                                                                                        = Julio
 angal.stat.june                                                                                        = Junio
-angal.stat.labmonthlybasic                                                                             = OH007 - Laboratorio Mensual Base
+angal.stat.labmonthlybasic                                                                             = OH007A - Laboratorio Mensual Base
 angal.stat.labmonthlyformatted                                                                         = HMIS 55b - Laboratorio Mensual Estructurado
+angal.stat.labmonthlyresult                                                                            = Informe de resultados de laboratorio
 angal.stat.labsummaryforopd                                                                            = OH008 - Resumen Laboratorio por DDP
 angal.stat.march                                                                                       = Marzo
 angal.stat.may                                                                                         = Mayo
